=== Opus Primus changelog.txt ===
Last revised May 10, 2014
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.2.4 ==
* Released ...

= Code =
* Added sanity check to only display comments_link when not in single view or in an archive view
* Bring the Featured Image Thumbnail back into the index view ... can you say "waffle"?
* Change `$output = null` to `$output = ''` in `OpusPrimusPosts::sticky_flag` method
* Corrected typo in `'opus_links_pages_after'` hook
* Corrected modified date/time output to account for scheduled posts being modified earlier than they are posted
* Refactored conditional comments and featured thumbnail checks into the `comments_link` and `show_featured_thumbnail` methods
* Replaced `wp_get_theme()->get( 'Version' )` call with `opus_primus_plugin_version()` call as a more accessible text string

= CSS =
* Added Format-Aside Dashicons to Post-Format: Aside posts
* Added Flag Dashicons to Sticky Posts
* Changed Password Protected Dashicons to use the Lock

= Miscellaneous =
* Added filter `opus_plugin_version_text`
* Change textdomain to match theme slug
* Updated `hooks-actions.txt`
* Updated `hooks-filters.txt` (corrected reference to `opus_first_author_details_text`)

/** ------------------------------------------------------------------------- */
== Version 1.2.3 ==
* Released February 2014

= Code =
* Added more tests
* Added Featured Image thumbnail to standard post-format archive views
* Moved `featured_image` wrapper into OpusPrimusGallery::featured_image method
* Moved `secondary_images` wrapper into OpusPrimusGallery::secondary_images method
* Moved the ellipsis out of the read more link
* Refactored `$output` to use `button` class versus the button element in meta byline flags
* Removed unused parameter `$more` from `OpusPrimusPosts::excerpt_more_link` method
* Removed `$sep_location` parameter as it was not used in `browser_title` method
* Removed Featured Image thumbnail from index view