@@ -977,12 +977,14 @@ class OpusPrimusImages {
 		if ( $echo ) {
 
 			/** Sanity check - are we in the right view to show the image? */
-			if ( ! is_single() || is_archive() ) {
+			if ( ! is_single() && is_archive() ) {
+				$this->featured_thumbnail( $size = 'thumbnail', $class = 'alignright' );
+			} else if ( ! is_single() ) {
 				$this->featured_thumbnail();
 			} else {
 				$this->featured_thumbnail( $size = 'full', $class = 'aligncenter' );
 			}
-			/** End if - not is single */
+			/** End if - not is single and is archive */
 
 		}
 		/** End if - echo is true */
